# timetracker

./: .gitignore  README.md
frontend/: index.html
frontend-rs/: Cargo.toml  Makefile  README.md
frontend-rs/src/: lib.rs  main.rs
frontend-rs/static/: index.html
frontend-rs/static/css/: main.css
frontend-rs/static/js/: insertAdjacentHTML.js  webplatform.js
frontend/css/: main.css
frontend/js/: main.js
ruby/: .gems  config.ru  models.rb
rust/: Cargo.toml
rust/src/: main.rs  models.rs  responses.rs  user_handling.rs
